--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.3",
     "fastapi[standard]>=0.128.1",
+    "psycopg>=3.3.2",
     "sqlmodel>=0.0.32",
     "uuid-utils>=0.14.0",
 ]
