--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "alembic>=1.18.3",
     "fastapi[standard]>=0.128.1",
     "psycopg>=3.3.2",
+    "pwdlib[argon2]>=0.3.0",
+    "pyjwt>=2.11.0",
     "sqlmodel>=0.0.32",
     "uuid-utils>=0.14.0",
 ]
