--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.3",
+    "cloudinary>=1.44.1",
     "fastapi-mail>=1.6.1",
     "fastapi[standard]>=0.128.1",
     "psycopg>=3.3.2",
     "pwdlib[argon2]>=0.3.0",
     "pydantic-settings>=2.12.0",
     "pyjwt>=2.11.0",
+    "python-multipart>=0.0.22",
     "sqlmodel>=0.0.32",
     "uuid-utils>=0.14.0",
 ]
